@@ -12,6 +12,8 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.bgerp.action.base.Actions;
+import org.bgerp.action.base.BaseAction;
 import org.bgerp.app.bean.Bean;
 import org.bgerp.app.dist.App;
 import org.bgerp.app.dist.inst.InstalledModule;
@@ -20,6 +22,10 @@ import org.bgerp.app.servlet.jsp.tag.NewInstanceTag;
 import org.bgerp.model.base.IdTitle;
 import org.bgerp.util.Log;
 
+import javassist.NotFoundException;
+import ru.bgcrm.model.user.PermissionNode;
+import ru.bgcrm.servlet.ActionServlet;
+import ru.bgcrm.struts.form.DynActionForm;
 import ru.bgcrm.util.Utils;
 
 /**
@@ -330,6 +336,28 @@ public class UtilFunction {
             return InstallerChanges.UPDATE_TO_CHANGE_URL + "/" + changeId + "/doc/" + url;
 
         return App.URL + "/version/" + m.getVersion() + "/doc/" + url;
+    }
+
+    /**
+     * Action call URL like {@code actionPath.do?method=methodName} out of semicolon separated action class and method {@code actionId:methodName}
+     * @param action the semicolon separated action class and method
+     * @return the URL
+     * @throws NotFoundException
+     */
+    public static String actionUrl(String action) throws NotFoundException {
+        String id = PermissionNode.actionClass(action);
+        Class<? extends BaseAction> clazz = Actions.get(id);
+        if (clazz == null)
+            throw new NotFoundException("Action class not found for action: " + action);
+
+        var result =  new StringBuffer(100);
+        result.append(ActionServlet.getActionPath(clazz)).append(".do");
+
+        String method = PermissionNode.actionMethod(action);
+        if (!PermissionNode.ACTION_METHOD_UNSPECIFIED.equals(method))
+            result.append("?").append(DynActionForm.PARAM_ACTION_METHOD).append("=").append(method);
+
+        return result.toString();
     }
 
     @Deprecated
