@@ -2,5 +2,4 @@
 <%@ include file="/WEB-INF/jspf/taglibs.jsp"%>
 
 <ui:menu-item title="Action Log" href="admin/log/action" icon="ti-eye"
-	action="org.bgerp.plugin.svc.log.action.admin.ActionLogAction:null"
-	command="/admin/plugin/log/action.do" />
+	action="org.bgerp.plugin.svc.log.action.admin.ActionLogAction:null" />
