@@ -3,10 +3,8 @@
 
 <ui:menu-group title="${l.l('Рассылки')}">
 	<ui:menu-item title="${l.l('Рассылки')}" href="dispatch"
-		action="ru.bgcrm.plugin.dispatch.action.DispatchAction:dispatchList"
-		command="/user/plugin/dispatch/dispatch.do?method=dispatchList" />
+		action="ru.bgcrm.plugin.dispatch.action.DispatchAction:dispatchList" />
 
 	<ui:menu-item title="${l.l('Сообщения рассылок')}" href="dispatch/message"
-		action="ru.bgcrm.plugin.dispatch.action.DispatchAction:messageList"
-		command="/user/plugin/dispatch/dispatch.do?method=messageList" />
+		action="ru.bgcrm.plugin.dispatch.action.DispatchAction:messageList" />
 </ui:menu-group>
