@@ -2,34 +2,32 @@
 <%@ include file="/WEB-INF/jspf/taglibs.jsp"%>
 
 <%@ attribute name="action" description="Action identifier" required="true"%>
-<%@ attribute name="href" description="Tool's URL to be opened in UI"%>
-<%@ attribute name="command" description="JS command or action call URL"%>
 <%@ attribute name="title" description="Title"%>
 <%@ attribute name="icon" description="Font icon"%>
-<%-- if href presents - then command contains action's URL, else - JS code --%>
+<%-- only href or command can be used --%>
+<%@ attribute name="href" description="Tool's URL to be opened in UI"%>
+<%@ attribute name="command" description="JS command or action call URL"%>
 
+<%-- making sure href starting from '/user' --%>
 <c:if test="${not empty href and not href.startsWith('/user')}">
 	<c:set var="href" value="/user/${href}"/>
 </c:if>
 
-<c:set var="allowed" value="false"/>
-<p:check action="${action}">
-	<c:set var="allowed" value="true"/>
-	<c:if test="${empty hidden}">
-		<li>
-			<c:choose>
-				<c:when test="${not empty href}">
-					<a href="${href}" onclick="$$.shell.followLink(this.href, event)">
-				</c:when>
-				<c:otherwise>
-					<a href="#" onclick="${command}; return false;">
-				</c:otherwise>
-			</c:choose>
-			<ui:menu-icon icon="${icon}"/>
-			${title}</a>
-		</li>
-	</c:if>
-</p:check>
+<c:set var="allowed" value="${ctxUser.checkPerm(action)}"/>
+<c:if test="${allowed}">
+	<li>
+		<c:choose>
+			<c:when test="${not empty href}">
+				<a href="${href}" onclick="$$.shell.followLink(this.href, event)">
+			</c:when>
+			<c:otherwise>
+				<a href="#" onclick="${command}; return false;">
+			</c:otherwise>
+		</c:choose>
+		<ui:menu-icon icon="${icon}"/>
+		${title}</a>
+	</li>
+</c:if>
 
 <c:if test="${not empty href}">
 	<c:set var="menuItemsJS" scope="request">
@@ -37,7 +35,7 @@
 		<c:if test="${not empty icon}">
 			menuItems.icons.push('${icon}');
 		</c:if>
-		menuItems.add({href: '${href}', action: '${command}', title: '${title}', allowed: ${allowed}});
+		menuItems.add({href: '${href}', action: '${u:actionUrl(action)}', title: '${title}', allowed: ${allowed}});
 		<c:if test="${not empty icon}">
 			menuItems.icons.pop();
 		</c:if>
